--- a/Components/App.razor
+++ b/Components/App.razor
@@ -8,7 +8,14 @@
     <link rel="stylesheet" href="@Assets["lib/bootstrap/dist/css/bootstrap.min.css"]" />
     <link rel="stylesheet" href="@Assets["app.css"]" />
     <ImportMap />
-    <link rel="icon" type="image/png" href="favicon.png" />
+    
+    <!-- Favicon and app icons -->
+    <link rel="icon" type="image/png" sizes="32x32" href="favicon.png" />
+    <link rel="icon" type="image/png" sizes="16x16" href="favicon-16x16.png" />
+    <link rel="apple-touch-icon" sizes="180x180" href="apple-touch-icon.png" />
+    <meta name="application-name" content="CrossTenantChat" />
+    <meta name="description" content="Cross-Tenant Azure Communication Services Chat Application" />
+    
     <HeadOutlet />
 </head>
 
