--- a/Components/Pages/Home.razor
+++ b/Components/Pages/Home.razor
@@ -23,7 +23,7 @@
             </p>
             
             <div class="fluent-hero-actions">
-                <a href="/chat" class="fluent-button fluent-button-primary fluent-button-large">
+                <a href="/login?returnUrl=/chat" class="fluent-button fluent-button-primary fluent-button-large">
                     <svg width="20" height="20" viewBox="0 0 16 16" fill="currentColor" aria-hidden="true">
                         <path d="M16 8c0 3.866-3.582 7-8 7a9.06 9.06 0 0 1-2.347-.306c-.584.296-1.925.864-4.181 1.234-.2.032-.352-.176-.273-.362.354-.836.674-1.95.77-2.966C.744 11.37 0 9.76 0 8c0-3.866 3.582-7 8-7s8 3.134 8 7z"/>
                     </svg>
